tests/fail/list-literal-types.virtue
list = [1, 2, "3"]

# error: type error
#  --> test.virtue:1:15
#    |
#  1 | list = [1, 2, "3"]
#    |               ^^^ expected i64, found string
#
